# portfolio

./: README.md  docker-compose.yml  main.py  pyproject.toml  test.ipynb
.github/workflows/: static.yml
DevFolio/: cisive.html  index.html  lb.html  portfolio.code-workspace
DevFolio/assets/js/: main.js
email_api/: Dockerfile  README.md  pyproject.toml
email_api/app/: entrypoint.sh  main.py
email_api/app/config/: config.py
email_api/app/models/: email_message.py
email_api/app/utils/: send_email.py
frontend/: act.html  bki.html  cisive.html  index.html  lb.html  nsai.html  rac.html
frontend/assets/css/: style.css
frontend/assets/js/: main.js
