[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "Harrison Hoffman's portfolio website backend"
authors = ["hfhoffman1144 <hfh160130@utdallas.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.33.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
